# git_sub_pkg

./: .gitignore  README.md  pyproject.toml
git_sub_pkg/: __main__.py
git_sub_pkg/lib/: test.py
