[tool.poetry]
name = "git_sub_pkg"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <KAkikaku.tateyama@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <=3.9"
numpy = "1.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
